--- a/index.html
+++ b/index.html
@@ -8,25 +8,63 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Instagram Home</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 
-<body>
+<body class="container">
     <div>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container justify-content: center
-            <div class=" d-flex flex-row justify-content-between align-items-center col-9">
-                <a class="navbar-brand" href="#">
+        <nav class="navbar-expand-lg navbar-light bg-light tamano">
+
+            <div class="d-flex flex-row justify-content-between align-items-center">
+                <a class="navbar-brand col-9" href="#">
                     <img src="./Instagram/img/logo instagram png.png" width="100" height="45" alt="">
                 </a>
-                <div>
-                    <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <div class="col-3 row">
+                    <form class="form-inline my-2 my-lg-0 col-10">
+
                         <form class="form-inline my-2 my-lg-0">
-                            <button class="btn btn-primary" type="submit justify-content:flex-end">CREATE A NEW
-                                POST</button>
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-primary" data-toggle="modal"
+                                data-target="#exampleModal">
+                                CREATE A NEW POST
+                            </button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
+                                aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel"></h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            ...
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary"
+                                                data-dismiss="modal">Cancel</button>
+                                            <button type="button" class="btn btn-primary">Publish</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </form>
                     </form>
+                    <div class="dropdown col-2">
+                        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            ⚙️
+                        </a>
 
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </div>
 
                 </div>
             </div>
@@ -34,33 +72,93 @@
     </div>
 
     <div class="container-fluid">
-        <div class="row">
-            <a href="#" class=""></a>
 
-            <div class="col-4"><img class="img-thumbnail marco" src="./Instagram/img/lunes.jpg" alt=""></div>
-            <div class="col-4"><img class="img-thumbnail" src="./Instagram/img/martes.jpg" alt=""></div>
-            <div class="col-4"><img class="img-thumbnail" src="./Instagram/img/miercoles.jpg" alt=""></div>
-        </div>
-        <div class="row">
-            <div class="col-4"><img class="img-thumbnail" src="./Instagram/img/tachira.jpg" alt=""></div>
-            <div class="col-4"><img class="img-thumbnail" src="./Instagram/img/ImagesCA40XPU5.jpg" alt=""></div>
-            <div class="col-4"><img class="img-thumbnail" src="./Instagram/img/leones.jpg" alt=""></div>
-        </div>
-        <div class="row">
-            <div class="col-4"><img class="img-thumbnail" src="./Instagram/img/magallanes.png" alt=""></div>
-            <div class="col-4"><img class="img-thumbnail" src="./Instagram/img/capriles.jpg" alt=""></div>
-            <div class="col-4"><img class="img-thumbnail" src="./Instagram/img/danny.jpg" alt=""></div>
-        </div>
+        <div class="shadow p-3 mb-5 bg-white rounded">
+            <div class="contain">
+                <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active fas fa-th" id="pills-home-tab" data-toggle="pill" href="#pills-home"
+                            role="tab" aria-controls="pills-home" aria-selected="true"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fas fa-square" id="pills-profile-tab" data-toggle="pill"
+                            href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false"></a>
+                    </li>
+                </ul>
+                <div class="tab-content" id="pills-tabContent">
+                    <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
 
+
+
+                        <div class="row justify-content-center">
+                            <div class="card">
+                                <img src="./Instagram/img/lunes.jpg" alt="..."
+                                    class="img-fluid mx-auto d-block imagesSquare images">
+                                <div class="card-body">
+                                    <p class="card-text">Primero quick example text to build on the card title and make
+                                        up
+                                        the bulk of the card's content.</p>
+                                    <div class="row">
+                                        <div class="col-n">
+                                            ♡
+                                        </div>
+                                        <div class="col-1">
+                                            💬
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="tab-pane fade show active" id="pills-home" role="tabpanel"
+                        aria-labelledby="pills-home-tab">
+                        <div class="row">
+                            <a href="#" class=""></a>
+
+                            <div class="col-4"><img class="img-thumbnail marco" src="./Instagram/img/lunes.jpg" alt="">
+                            </div>
+                            <div class="col-4"><img class="img-thumbnail marco" src="./Instagram/img/martes.jpg" alt="">
+                            </div>
+                            <div class="col-4"><img class="img-thumbnail marco" src="./Instagram/img/miercoles.jpg"
+                                    alt="">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-4"><img class="img-thumbnail marco" src="./Instagram/img/tachira.jpg"
+                                    alt=""></div>
+                            <div class="col-4"><img class="img-thumbnail marco" src="./Instagram/img/ImagesCA40XPU5.jpg"
+                                    alt="">
+                            </div>
+                            <div class="col-4"><img class="img-thumbnail marco" src="./Instagram/img/leones.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-4"><img class="img-thumbnail marco" src="./Instagram/img/magallanes.png"
+                                    alt="">
+                            </div>
+                            <div class="col-4"><img class="img-thumbnail marco" src="./Instagram/img/capriles.jpg"
+                                    alt=""></div>
+                            <div class="col-4"><img class="img-thumbnail marco" src="./Instagram/img/danny.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
             crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
             crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/0805582109.js" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
